# odoo-bringout-l10n_ba_sifra_in_documents

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
l10n_ba_sifra_in_documents/: README.rst  __manifest__.py
l10n_ba_sifra_in_documents/i18n/: bs.po  l10n_ba_sifra_in_documents.pot
l10n_ba_sifra_in_documents/models/: __init__.py  purchase_order.py
l10n_ba_sifra_in_documents/views/: report_picking_view.xml  report_purchaseorder_document_view.xml  sale_order_document_view.xml
